# Godel_Cryptographic_Engine_March2026_V1

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.md  NOTICE  PUBLIC_TAG.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
paper/: CITATION.bib  gce_commitment_arxiv.tex  manuscript_v2.md  paper.css  paper_metrics.json  paper_metrics.tex
results/: RESULTS_README.md  backend_probe_keeper_mlkem_native.json  backend_probe_legacy_mlkem_alpha.json  backend_probe_legacy_mlkem_alpha_current_2026_03_26.json  benchmark_keeper_mlkem_native.json  benchmark_legacy_mlkem_alpha.json  benchmark_legacy_mlkem_alpha_current_2026_03_26.json  cross_backend_validation.json  proof_keeper_mlkem_native.json  proof_legacy_mlkem_alpha.json  proof_legacy_mlkem_alpha_current_2026_03_26.json  smoke_keeper_mlkem_native.json  smoke_legacy_mlkem_alpha.json  smoke_legacy_mlkem_alpha_current_2026_03_26.json  wrapper_probe_bundle.json  wrapper_probe_keeper_mlkem_skeleton.json  wrapper_probe_libfips203_skeleton.json
scripts/: 00_backend_probe.py  01_smoke_test.py  02_proof_bundle.py  03_benchmark.py  04_cross_backend_validate.py  05_probe_wrapper_status.py  check_claims.py
src/gce/: __init__.py  engine.py  formal_system.py  godel_numbering.py  kem_backends.py
src/gce/kem_wrappers/: keeper_mlkem_wrapper.py  libfips203_wrapper.py
tests/: test_properties.py
